# freerouting-python-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: test_routing.py
freerouting/: client.py
